force-app/main/default/objects/TimezonePolicy__mdt/TimezonePolicy__mdt.object-meta.xml
<CustomObject>
    <label>Timezone Policy</label>
    <pluralLabel>Timezone Policies</pluralLabel>
    <description>Defines working hours and escalation policies for each timezone region</description>
</CustomObject>