force-app/main/default/objects/TimezonePolicy__mdt/fields/EscalationOrder__c.field-meta.xml
<CustomField>
    <fullName>EscalationOrder__c</fullName>
    <label>Escalation Order</label>
    <description>Order in escalation chain (1=Primary, 2=Secondary, 3=Tertiary)</description>
    <required>true</required>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>