force-app/main/default/objects/TimezonePolicy__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <description>Whether this timezone policy is currently active</description>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>