force-app/main/default/objects/TimezonePolicy__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <description>Geographic region (Europe, Africa, Asia)</description>
    <required>true</required>
    <type>Text</type>
    <length>100</length>
</CustomField>