force-app/main/default/objects/TimezonePolicy__mdt/fields/SLAHours__c.field-meta.xml
<CustomField>
    <fullName>SLAHours__c</fullName>
    <label>SLA Hours</label>
    <description>Service Level Agreement response time in hours</description>
    <required>true</required>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
</CustomField>