force-app/main/default/objects/TimezonePolicy__mdt/fields/TimezoneId__c.field-meta.xml
<CustomField>
    <fullName>TimezoneId__c</fullName>
    <label>Timezone ID</label>
    <description>Salesforce Timezone ID (Europe/Paris, Africa/Lagos)</description>
    <required>true</required>
    <type>Text</type>
    <length>100</length>
</CustomField>