force-app/main/default/objects/TimezonePolicy__mdt/fields/WorkingHoursEnd__c.field-meta.xml
<CustomField>
    <fullName>WorkingHoursEnd__c</fullName>
    <label>Working Hours End</label>
    <description>End of working hours (18:00)</description>
    <required>true</required>
    <type>Text</type>
    <length>5</length>
</CustomField>