force-app/main/default/objects/TimezonePolicy__mdt/fields/WorkingHoursStart__c.field-meta.xml
<CustomField>
    <fullName>WorkingHoursStart__c</fullName>
    <label>Working Hours Start</label>
    <description>Start of working hours (09:00)</description>
    <required>true</required>
    <type>Text</type>
    <length>5</length>
</CustomField>